--- a/Genomics2.ipynb
+++ b/Genomics2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "id": "73d1e5c5",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "id": "86399eec",
    "metadata": {},
    "outputs": [
@@ -73,53 +73,50 @@
     "#    elif (len(str(fasta.seq)) == maxlen):\n",
     "#        print('Maximum length sequence:', fasta.id)\n",
     "\n",
-    "#f.seek(0)\n",
-    "f.close()\n"
+    "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 32,
    "id": "1c83f466",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['gi|142022655|gb|EQ086233.1|43',\n",
-       " 'gi|142022655|gb|EQ086233.1|160',\n",
-       " 'gi|142022655|gb|EQ086233.1|41',\n",
-       " 'gi|142022655|gb|EQ086233.1|221',\n",
-       " 'gi|142022655|gb|EQ086233.1|294',\n",
-       " 'gi|142022655|gb|EQ086233.1|323',\n",
-       " 'gi|142022655|gb|EQ086233.1|564',\n",
-       " 'gi|142022655|gb|EQ086233.1|521',\n",
-       " 'gi|142022655|gb|EQ086233.1|455',\n",
-       " 'gi|142022655|gb|EQ086233.1|229',\n",
-       " 'gi|142022655|gb|EQ086233.1|422',\n",
-       " 'gi|142022655|gb|EQ086233.1|384',\n",
-       " 'gi|142022655|gb|EQ086233.1|280',\n",
-       " 'gi|142022655|gb|EQ086233.1|158',\n",
-       " 'gi|142022655|gb|EQ086233.1|59',\n",
-       " 'gi|142022655|gb|EQ086233.1|319',\n",
-       " 'gi|142022655|gb|EQ086233.1|438',\n",
-       " 'gi|142022655|gb|EQ086233.1|210',\n",
-       " 'gi|142022655|gb|EQ086233.1|237',\n",
-       " 'gi|142022655|gb|EQ086233.1|507',\n",
-       " 'gi|142022655|gb|EQ086233.1|350',\n",
-       " 'gi|142022655|gb|EQ086233.1|245',\n",
-       " 'gi|142022655|gb|EQ086233.1|279',\n",
-       " 'gi|142022655|gb|EQ086233.1|378',\n",
-       " 'gi|142022655|gb|EQ086233.1|101']"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gi|142022655|gb|EQ086233.1|43\n",
+      "gi|142022655|gb|EQ086233.1|160\n",
+      "gi|142022655|gb|EQ086233.1|41\n",
+      "gi|142022655|gb|EQ086233.1|221\n",
+      "gi|142022655|gb|EQ086233.1|294\n",
+      "gi|142022655|gb|EQ086233.1|323\n",
+      "gi|142022655|gb|EQ086233.1|564\n",
+      "gi|142022655|gb|EQ086233.1|521\n",
+      "gi|142022655|gb|EQ086233.1|455\n",
+      "gi|142022655|gb|EQ086233.1|229\n",
+      "gi|142022655|gb|EQ086233.1|422\n",
+      "gi|142022655|gb|EQ086233.1|384\n",
+      "gi|142022655|gb|EQ086233.1|280\n",
+      "gi|142022655|gb|EQ086233.1|158\n",
+      "gi|142022655|gb|EQ086233.1|59\n",
+      "gi|142022655|gb|EQ086233.1|319\n",
+      "gi|142022655|gb|EQ086233.1|438\n",
+      "gi|142022655|gb|EQ086233.1|210\n",
+      "gi|142022655|gb|EQ086233.1|237\n",
+      "gi|142022655|gb|EQ086233.1|507\n",
+      "gi|142022655|gb|EQ086233.1|350\n",
+      "gi|142022655|gb|EQ086233.1|245\n",
+      "gi|142022655|gb|EQ086233.1|279\n",
+      "gi|142022655|gb|EQ086233.1|378\n",
+      "gi|142022655|gb|EQ086233.1|101\n"
+     ]
     }
    ],
    "source": [
-    "identifier"
+    "for id in identifier:\n",
+    "    print(id)"
    ]
   },
   {
@@ -133,19 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 33,
    "id": "3e20fad9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('dna.example.fasta')\n",
-    "seq_dict = SeqIO.to_dict(SeqIO.parse(f,'fasta'))\n",
-    "f.close()"
+    "with open('dna.example.fasta') as f:\n",
+    "    seq_dict = SeqIO.to_dict(SeqIO.parse(f,'fasta'))\n",
+    "# with open automatically closes the file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "id": "c1dbb07c",
    "metadata": {},
    "outputs": [
@@ -252,92 +249,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "id": "dda132f3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(213,\n",
-       " 363,\n",
-       " 918,\n",
-       " 594,\n",
-       " 1608,\n",
-       " 1686,\n",
-       " 507,\n",
-       " 159,\n",
-       " 552,\n",
-       " 1311,\n",
-       " 639,\n",
-       " 720,\n",
-       " 291,\n",
-       " 1218,\n",
-       " 1107,\n",
-       " 537,\n",
-       " 477,\n",
-       " 564,\n",
-       " 219,\n",
-       " 741,\n",
-       " 678,\n",
-       " 636,\n",
-       " 153,\n",
-       " 534,\n",
-       " 639)"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(213, 363, 918, 594, 1608, 1686, 507, 159, 552, 1311, 639, 720, 291, 1218, 1107, 537, 477, 564, 219, 741, 678, 636, 153, 534, 639)\n"
+     ]
     }
    ],
    "source": [
-    "maxlens"
+    "print(maxlens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "id": "2873f000",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(367,\n",
-       " 107,\n",
-       " 1194,\n",
-       " 1772,\n",
-       " 141,\n",
-       " 2824,\n",
-       " 825,\n",
-       " 126,\n",
-       " 86,\n",
-       " 125,\n",
-       " 216,\n",
-       " 1347,\n",
-       " 1427,\n",
-       " 150,\n",
-       " 3592,\n",
-       " 219,\n",
-       " 987,\n",
-       " 410,\n",
-       " 794,\n",
-       " 930,\n",
-       " 365,\n",
-       " 606,\n",
-       " 413,\n",
-       " 2,\n",
-       " 1633)"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(367, 107, 1194, 1772, 141, 2824, 825, 126, 86, 125, 216, 1347, 1427, 150, 3592, 219, 987, 410, 794, 930, 365, 606, 413, 2, 1633)\n"
+     ]
     }
    ],
    "source": [
-    "maxlen_pos"
+    "print(maxlen_pos)"
    ]
   },
   {
@@ -359,6 +302,14 @@
     "def find_repeats(seq, n):\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d232f85c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
